--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -1,27 +1,76 @@
 @import "bootstrap";
 
 .navbar-default {
-    color: #F0F0F0;
-    background-color: #0F0F0F;
-    background-image: none;
-    background-repeat: no-repeat;
+	color: #888888;
+	background-color: #1A1A1A;
+	font-weight: bold;
  }
  
-#logo {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    float: left;
-    margin-right: 10px;
-    font-size: 2em;
-    color: #F0F0F0;
-    background-color: #0F0F0F;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    padding-top: 9px;
-    font-weight: bold;
+.navbar-menubutton {
+	margin: 20px;
+	font-weight: bold;
+	color: #fff;
 }
 
-#logo:hover {
-    color: #5F5F5F;
-    text-decoration: none;
+.nav-item {
+	color: #888888;
+	text-align: center;
+	font-size: 1.4rem;
+}
+
+.nav-item.active, .nav-item:hover{
+	color: #FFFFFF;
+}
+
+.highlight-background {
+	background-color: #222222;
+	margin: 5px;
+	padding: 5px;
+}
+.main-background {
+	background-color: #1A1A1A;
+}
+.main-text-link {
+	font-weight: bold;
+	color: #888888;
+}
+.main-text-link:hover{
+	color: #fff;
+	text-decoration: none;
+}
+.main-text {
+	color: #888888;
+	font-size: 1.2rem;
+}
+
+.music-container {
+	width: 640px;
+	padding: 15px;
+	text-align: center;
+	margin: auto;
+	margin-bottom: 1rem;
+}
+
+.main-text-header {
+	color: #888888;
+	font-weight: bold;
+	padding-bottom: 20px;
+}
+
+.footer-text {
+	color: #888888;
+	font-weight: normal;
+}
+
+.footer-text-link {
+	color: #CCCCCC;
+}
+
+.footer-text-link:hover {
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+.pinktest {
+	background-color: #ff9999;
 }
