--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,55 +14,12 @@
     
     <div class="container-fluid main-background">
 			<div class="row">
-				<div class="col-lg-2 order-lg-1 col-10 offset-1 offset-lg-0 order-3 text-center mt-3">
-				
-				<p><a class="main-text-link" href="http://www.songkick.com/artists/9002289" target="_blank">ORDER#227 SHOWS</a></p>
-			
-				<a href="http://www.songkick.com/artists/9002289" class="songkick-widget main-text main-text-link" data-theme="dark" data-other-artists="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">LIVE DATES</a>
-				
-				<script src="//widget.songkick.com/widget.js"></script>
-				
-			</div>
+        <%= render 'layouts/leftbar' %>
 				<div class="col-lg-8 order-2 order-lg-2">
-					<div id="frontPageCarousel" class="carousel slide m-2" data-ride="carousel">
-						<ol class="carousel-indicators">
-							<li data-target="#frontPageCarousel" data-slide-to="0" class="active"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="1"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="2"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="3"></li>
-						</ol>
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img class="d-block w-100" src="images/15241840_1194167467318774_2378143932062040868_n.jpg" alt="Order#227 O2 Oxford Nov '16"/>
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/cfc_front.jpg" alt="Case For Concern"/>
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/norules_quote.jpg" alt="There's No Rules"/>
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/behind_quote.png" alt="Behind Closed Doors"/>
-							</div>
-						</div>
-						<a class="carousel-control-prev" href="#frontPageCarousel" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#frontPageCarousel" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
-					</div>
-				</div>	
-				<div class="col-lg-2 col-10 offset-1 offset-lg-0 order-1 order-lg-3 text-center mt-3">
-					<div class="row flex-row flex-lg-column d-flex  main-background justify-content-around">
-						<div class="m-4 mt-lg-0"><a href="https://www.facebook.com/Order227Band/" target="_blank"><img class="img" height="40px" src="images/FB-f-Logo__white_100.png" alt="Facebook" /></a></div>
-						<div class="m-4"><a href="https://twitter.com/order227band" target="_blank"><img class="img" height="40px" src="images/tw_link_g.png" alt="Twitter" /></a></div>
-						<div class="m-4"><a href="https://www.youtube.com/channel/UCO35S3PlOE1zmyndPTfsROw/" target="_blank"><img class="img" height="40px" src="images/yt_icon_mono_dark.png" alt="YouTube" /></a></div>
-						<div class="m-4"><a href="https://order227.bandcamp.com" target="_blank"><img class="img" height="40px" src="images/bandcamp/bandcamp-button-circle-line-white-64.png" alt="Bandcamp" /></a></div>
-					</div>
-				</div>
+          <%= yield %>
+        </div>
+
+        <%= render 'layouts/rightbar' %>
 			</div>
 		</div>
 		
