--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,30 @@
-
-<div class="canter jumbotron">
-    <h1>Order#227</h1>
-    <h2>Not One Step Back</h2>
-    
+<div id="frontPageCarousel" class="carousel slide m-2" data-ride="carousel">
+	<ol class="carousel-indicators">
+		<li data-target="#frontPageCarousel" data-slide-to="0" class="active"></li>
+		<li data-target="#frontPageCarousel" data-slide-to="1"></li>
+		<li data-target="#frontPageCarousel" data-slide-to="2"></li>
+		<li data-target="#frontPageCarousel" data-slide-to="3"></li>
+	</ol>
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img class="d-block w-100" src="images/15241840_1194167467318774_2378143932062040868_n.jpg" alt="Order#227 O2 Oxford Nov '16"/>
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="images/cfc_front.jpg" alt="Case For Concern"/>
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="images/norules_quote.jpg" alt="There's No Rules"/>
+		</div>
+		<div class="carousel-item">
+			<img class="d-block w-100" src="images/behind_quote.png" alt="Behind Closed Doors"/>
+		</div>
+	</div>
+	<a class="carousel-control-prev" href="#frontPageCarousel" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#frontPageCarousel" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
 </div>
