--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,9 @@
-    <div class="container-fluid text-center">
-			<a class="" href="index.html"><img src="images/O227textlogo_min.png" class="img-fluid" alt="Order227 Logo"/></a>
+    <div class="container-fluid text-center mt-3">
+			
+			<%= link_to image_tag("O227textlogo_min.png", {class: "img-fluid", alt: "Order227 Logo"}), root_path %>
+
+			<!--<a class="" href="index.html"><img src="O227textlogo_min.png" class="img-fluid" alt="Order227 Logo"/></a>-->
+
 		</div>
 
 		<nav class="navbar navbar-expand-lg navbar-dark navbar-default mb-4">
@@ -9,23 +13,17 @@
 			
 			<nav class="collapse navbar-collapse navbar-collapse-1 text-center flex-row justify-content-center">
 
-					<div class="row flex-row justify-content-center">
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link active" href="index.html">HOME</a></div>
+				<div class="row flex-row justify-content-center">
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link active" href="index.html">HOME</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="news.html">NEWS</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="bio.html">BIO</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="music.html">MUSIC</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="videos.html">VIDEOS</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="gallery.html">GALLERY</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="shows.html">SHOWS</a></div>
+					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="contact.html">CONTACT</a></div>
+				</div>
 
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="news.html">NEWS</a></div>
-
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="bio.html">BIO</a></div>
-
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="music.html">MUSIC</a></div>
-
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="videos.html">VIDEOS</a></div>
-
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="gallery.html">GALLERY</a></div>
-
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="shows.html">SHOWS</a></div>
-
-							<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="contact.html">CONTACT</a></div>
-					</div>
 
 			</nav>
     </nav>
