--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,13 @@
-		<div class="navbar navbar-expand-lg navbar-bottom navbar-default">	
-			<span class="footer-text">
-				&copy; 2018 Order#227. All Rights Reserved. Website by <a class="footer-text-link" href="mailto:contact@hootingbananastudios.com">Isaac Westwood</a>.
-			</span>
-		</div>	
+<div class="navbar navbar-bottom navbar-dark navbar-default">	
+	<span class="footer-text">
+		&copy; 2018 Order#227. All Rights Reserved. Website by <a class="footer-text-link" href="mailto:contact@hootingbananastudios.com">Isaac Westwood</a>.
+	</span>
+	
+	<div class="float-right footer-text">
+  	<% if !logged_in? %>
+      <%= link_to "Subscribe to mailing list / Login", login_path, class: "footer-text-link" %>
+    <% else %>
+    	Subscribed to mailing list as: <strong><%= current_user.username %></strong> - <%= link_to "Edit Subscription", edit_user_path(current_user), class: "footer-text-link" %> - <%= link_to "Log Out", logout_path, class: "footer-text-link" %>
+    <% end %>
+  </div>
+</div>	
