--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
-  <div class="row">
-    <div class="alert alert-danger col-8 col-offset-2">
+  <div class="row justify-content-center">
+    <div class="alert alert-danger col-8">
       <h5>Please correct the following errors:</h5>
       <ul>
         <% obj.errors.full_messages.each do |msg| %>
