--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,21 +1,36 @@
 <%= render 'shared/errors', obj: @user %> 
-  
-  <div class="row">
-    <div class="col-8 col-offset-2">
-      <%= form_for @user do |f| %>
+
+
+<%= form_for @user do |f| %>
+  <div class="row main-text">
+    <div class="col-sm-5">
       <%= f.label :username %>
-      <%= f.text_field :username %>
-      
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-      
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-      
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation %>
-      
-      <%= f.submit(@user.new_record? ? 'Subscribe to mailing list' : 'Edit User Profile', class: "btn btn-success") %>
-      <% end %>
     </div>
+    <div class="col-sm-7">
+      <%= f.text_field :username %>
+    </div>
+    <div class="col-sm-5">
+      <%= f.label :email %>
+    </div>
+    <div class="col-sm-7">
+      <%= f.email_field :email %>
+    </div>
+    <div class="col-sm-5">
+      <%= f.label :password %>
+    </div>
+    <div class="col-sm-7">
+      <%= f.password_field :password %>
+    </div>      
+    <div class="col-sm-5">
+      <%= f.label :password_confirmation %>
+    </div>
+    <div class="col-sm-7">
+      <%= f.password_field :password_confirmation %>
+    </div>
+    <div class="col-12 text-center mt-4">
+      <%= f.submit(@user.new_record? ? 'Subscribe to mailing list' : 'Edit User Profile', class: "btn btn-default") %>
+    </div>
+
   </div>
+  
+<% end %>
