--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,29 +1,33 @@
-    <div class="container-fluid text-center mt-3">
-			
-			<%= link_to image_tag("O227textlogo_min.png", {class: "img-fluid", alt: "Order227 Logo"}), root_path %>
+<div class="container-fluid text-center mt-3">
+	
+	<%= link_to image_tag("O227textlogo_min.png", {class: "img-fluid", alt: "Order227 Logo"}), root_path %>
 
-			<!--<a class="" href="index.html"><img src="O227textlogo_min.png" class="img-fluid" alt="Order227 Logo"/></a>-->
+	<!--<a class="" href="index.html"><img src="O227textlogo_min.png" class="img-fluid" alt="Order227 Logo"/></a>-->
 
+</div>
+
+<nav class="navbar navbar-expand-lg navbar-dark navbar-default mb-4">
+	<button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target=".navbar-collapse-1" aria-controls=".navbar-collapse-1" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-menubutton h1 ">MENU</span>
+	</button>
+	
+	<nav class="collapse navbar-collapse navbar-collapse-1 text-center flex-row justify-content-center">
+
+		<div class="row flex-row justify-content-center">
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "HOME", root_path, class: "#{active(root_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "NEWS", news_path, class: "#{active(news_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "BIO", bio_path, class: "#{active(bio_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "MUSIC", music_path, class: "#{active(music_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "VIDEOS", videos_path, class: "#{active(videos_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "GALLERY", gallery_path, class: "#{active(gallery_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "SHOWS", shows_path, class: "#{active(shows_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "CONTACT", contact_path, class: "#{active(contact_path)} nav-item nav-link" %></div>
 		</div>
 
-		<nav class="navbar navbar-expand-lg navbar-dark navbar-default mb-4">
-			<button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target=".navbar-collapse-1" aria-controls=".navbar-collapse-1" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-menubutton h1 ">MENU</span>
-			</button>
-			
-			<nav class="collapse navbar-collapse navbar-collapse-1 text-center flex-row justify-content-center">
 
-				<div class="row flex-row justify-content-center">
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link active" href="index.html">HOME</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="news.html">NEWS</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="bio.html">BIO</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="music.html">MUSIC</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="videos.html">VIDEOS</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="gallery.html">GALLERY</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="shows.html">SHOWS</a></div>
-					<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><a class="nav-item nav-link" href="contact.html">CONTACT</a></div>
-				</div>
-
-
-			</nav>
-    </nav>
+	</nav>
+</nav>
+    
+    
+    
+          
