--- a/app/views/layouts/_rightbar.html.erb
+++ b/app/views/layouts/_rightbar.html.erb
@@ -1,8 +1,8 @@
 <div class="col-lg-2 col-10 offset-1 offset-lg-0 order-1 order-lg-3 text-center mt-3">
 	<div class="row flex-row flex-lg-column d-flex  main-background justify-content-around">
-		<div class="m-4 mt-lg-0"><a href="https://www.facebook.com/Order227Band/" target="_blank"><img class="img" height="40px" src="images/FB-f-Logo__white_100.png" alt="Facebook" /></a></div>
-		<div class="m-4"><a href="https://twitter.com/order227band" target="_blank"><img class="img" height="40px" src="images/tw_link_g.png" alt="Twitter" /></a></div>
-		<div class="m-4"><a href="https://www.youtube.com/channel/UCO35S3PlOE1zmyndPTfsROw/" target="_blank"><img class="img" height="40px" src="images/yt_icon_mono_dark.png" alt="YouTube" /></a></div>
-		<div class="m-4"><a href="https://order227.bandcamp.com" target="_blank"><img class="img" height="40px" src="images/bandcamp/bandcamp-button-circle-line-white-64.png" alt="Bandcamp" /></a></div>
+		<div class="m-4 mt-lg-0"><%= link_to image_tag("FB-f-Logo__white_100.png", {class: "img img-menu", alt: "Facebook"}), "https://www.facebook.com/Order227Band/", target: "_blank" %></div>
+		<div class="m-4"><%= link_to image_tag("tw_link_g.png", {class: "img img-menu", alt: "Twitter"}), "https://twitter.com/order227band", target: "_blank" %></div>
+		<div class="m-4"><%= link_to image_tag("yt_icon_mono_dark.png", {class: "img img-menu", alt: "YouTube"}), "https://www.youtube.com/channel/UCO35S3PlOE1zmyndPTfsROw/", target: "_blank" %></div>
+		<div class="m-4"><%= link_to image_tag("bandcamp/bandcamp-button-circle-line-white-64.png", {class: "img img-menu", alt: "Bandcamp"}), "https://order227.bandcamp.com", target: "_blank" %></div>
 	</div>
 </div>
