--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,7 +18,7 @@
 			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "MUSIC", music_path, class: "#{active(music_path)} nav-item nav-link" %></div>
 			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "VIDEOS", videos_path, class: "#{active(videos_path)} nav-item nav-link" %></div>
 			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "GALLERY", gallery_path, class: "#{active(gallery_path)} nav-item nav-link" %></div>
-			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "SHOWS", shows_path, class: "#{active(shows_path)} nav-item nav-link" %></div>
+			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "SHOWS", liveshows_path, class: "#{active(liveshows_path)} nav-item nav-link" %></div>
 			<div class="col-6 col-lg-auto m-xs-6 m-lg-0"><%= link_to "CONTACT", contact_path, class: "#{active(contact_path)} nav-item nav-link" %></div>
 		</div>
 
