--- a/app/views/pages/siteadmin.html.erb
+++ b/app/views/pages/siteadmin.html.erb
@@ -1,5 +1,14 @@
+<hr/>
 <div class="row justify-content-center">
-  <p class="main-text main-text-header">ADD NEW CONTENT:</p>
-	<div class="col-6 m-6"><%= link_to "NEW USER", register_path, class: "main-text main-text-header main-text-link" %></div>
-	<div class="col-6 m-6"><%= link_to "NEW POST", news_path, class:"main-text main-text-header main-text-link" %></div>
+  <div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "POSTS", posts_path, class: "main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "PICTURES", pictures_path, class:"main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "BANDS", bands_path, class: "main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "USERS", users_path, class:"main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "SHOWS", shows_path, class: "main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "VENUES", venues_path, class:"main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "RELEASES", releases_path, class:"main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "TRACKS", tracks_path, class:"main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "VIDEOS", videos_path, class: "main-text main-text-header main-text-link" %></div>
+	<div class="col-lg-6 my-4 my-lg-3 text-center"><%= link_to "RELEASE-TYPES", release_types_path, class: "main-text main-text-header main-text-link" %></div>
 </div>
+<hr/>
