venues/shows and nested forms

--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -21,7 +21,7 @@
       <%= f.text_field :contact_name %>
     </div>
     <div class="col-sm-5">
-      <%= f.label :url %> (optional)
+      <%= f.label :url, 'Band Page' %> (optional)
     </div>
     <div class="col-sm-7">
       <%= f.url_field :url %>
