--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -12,10 +12,15 @@
     font-style: normal;
 }
 
-div, button {
+div, button, select, option {
 	font-family: '1952_rheinmetallregular', Arial;
 }
 
+.dropdown-options {
+	font-family: '1952_rheinmetallregular', Arial;
+	color: #000000;
+	background-color: #FFFFFF;
+}
 
 hr {
   border-color: #777777;
