--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,7 @@
 <% if obj.errors.any? %>
   <div class="row justify-content-center">
     <div class="alert alert-danger col-8">
+      <a class="close" data-dismiss="alert">&#215;</a>
       <h5>Please correct the following errors:</h5>
       <ul>
         <% obj.errors.full_messages.each do |msg| %>
