--- a/app/views/shows/edit.html.erb
+++ b/app/views/shows/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "Edit show: " + @show.date.to_s %>
+<%= render 'shared/page_title', title: "Edit show: " + display_venue(@show.venue) + " on " + format_date(@show.date) %>
 
 <%= render 'form' %>
